--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -3,7 +3,11 @@
 
   <span class="md-toolbar-filler"></span>
 
-  <a href="javascript:;">Home</a>
-  <a href="javascript:;">Champions</a>
-  <a href="javascript:;">Items</a>
+  <a href="javascript:;" routerLink="/home">Home</a>
+  <a href="javascript:;" routerLink="/champions-list">Champions</a>
+  <a href="javascript:;" routerLink="/items-list">Items</a>
 </md-toolbar>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
