--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -1,3 +1,17 @@
 body {
-  margin: 0px;
+  margin: 0;
+}
+
+a img{
+  border: 0px;
+}
+
+::-moz-selection {
+  background-color: #6dadff;
+  color: #fff;
+}
+
+::selection {
+  background-color: #6dadff;
+  color: #fff;
 }
