--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -1,13 +1,9 @@
-<md-toolbar color="primary">
-  <span>Data of Legends</span>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+	<header></header>
 
-  <span class="md-toolbar-filler"></span>
+	<div>
+		<router-outlet></router-outlet>
+	</div>
 
-  <a href="javascript:;" routerLink="/home">Home</a>
-  <a href="javascript:;" routerLink="/champions-list">Champions</a>
-  <a href="javascript:;" routerLink="/items-list">Items</a>
-</md-toolbar>
-
-<div>
-  <router-outlet></router-outlet>
+	<footer></footer>
 </div>
